# kp

./: .gitignore  .htpasswd  1c_china.pub  APPLY_CONFIG.sh  README.md  auth_plan  check_service.sh  curl_output.html  debug_file_access.py  field.md  index.html  nginx-site-fastapi.conf  package-lock.json  package.json  pi.html  playwright-width.config.js  playwright.config.js  setup_nginx_ssl.sh  setup_password.sh  tailwind.config.js  test_checklist.sh  test_parser.php  test_python_integration.php  test_site_parser.php  test_with_auth.sh  torgikp.html
api/: auth_utils.php  (+28 more)
backend/: .env.example  .gitignore  README.md  USERS.md  alembic.ini  debug_extraction.py  kp-auth-backend.service  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20241202_0001_initial.py
backend/app/: __main__.py  main.py
backend/app/api/: router.py
backend/app/cli/: manage_users.py  seed_users.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py  db.py
backend/app/models/: __init__.py  audit_log.py  mixins.py  password_reset.py  session.py  trusted_device.py  user.py
backend/app/parsing/: router.py  schemas.py  service.py  tender_schemas.py
backend/app/repositories/: device.py  session.py  user.py
backend/app/schemas/: auth.py  device.py  invoice.py
backend/app/services/: auth.py  dadata_service.py  device.py  invoice_service.py  pdf_service.py  user.py
backend/scripts/: install_service.sh  manage_service.sh  seed_users.sh  start_server.sh
backend/tests/: test_health.py  test_invoice_schema.py
(+117 files in other folders)
