[tool.poetry]
name = "kp-auth-backend"
version = "0.1.0"
description = "Auth service for kp.uralreduktor.com based on FastAPI + Postgres"
authors = ["KP Team <dev@uralreduktor.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.20"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
passlib = { extras = ["argon2"], version = "^1.7.4" }
python-multipart = "^0.0.9"
redis = "^5.1.0"
httpx = "^0.27.2"
structlog = "^24.4.0"
typer = "^0.12.3"
playwright = "^1.49.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
fake-useragent = "^2.0.3"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
anyio = "^4.4.0"
ruff = "^0.6.7"
mypy = "^1.11.1"

[tool.poetry.scripts]
app = "app.__main__:main"
users = "app.cli.manage_users:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "B", "S"]
ignore = ["B008"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
